# Polytope-Executor

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: build.yml  docker-build.yml  docker-publish.yml
src/: main.cpp
